backend.log

> accubooks-enterprise@1.0.0 start:dev
> cross-env NODE_ENV=development nodemon --exec tsx server/index.ts

[33m[nodemon] 3.1.10[39m
[33m[nodemon] to restart at any time, enter `rs`[39m
[33m[nodemon] watching path(s): *.*[39m
[33m[nodemon] watching extensions: ts,json[39m
[32m[nodemon] starting `tsx server/index.ts`[39m
/mnt/c/FidiMyProjects2025/Software_Projects/AccuBooks/AccuBooks/server/routes.ts:39
import { enforceBillingStatus, enforcePlanLimits, enforcePlanLimitsMiddleware, getBillingEnforcementMode, getCompanyIdFromRequest } from "./middleware/billing-enforcement";
                                                                                                          ^

SyntaxError: The requested module './middleware/billing-enforcement' does not provide an export named 'getCompanyIdFromRequest'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:213:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:320:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:606:24)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v20.20.0
[31m[nodemon] app crashed - waiting for file changes before starting...[39m
